[package]
name = "pdf"
version = "0.5.2"
authors = ["Simon Sapin <simon.sapin@exyr.org>",
	   "Rasmus Kaj <rasmus@krats.se>"]
license = "MIT"
description = """
This crate is now pdf-canvas.
Other code will appear under this name."""
documentation = "https://docs.rs/pdf"
repository = "https://github.com/kaj/rust-pdf"
readme = "README.md"

build = "src/build_metrics.rs"

[build-dependencies]
lazy_static = "0.2"

[dependencies]
lazy_static = "0.2"
time = "0.1"
